Fixed search icon shrinking too much

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -20,7 +20,7 @@
 .searchButton {
   margin-left: -0.1em;
   border-radius: 0 0.5em 0.5em 0;
-  width: 4%;
+  width: 3.5em;
   background-color: rgb(2, 48, 63);
   border: 3px solid rgb(2, 48, 63);
   padding: 0;
